# alpine-home-assistant

./: .gitignore  README.md  actions@kuba2k2.github.io-64b57843.rsa.pub  build_all.sh
aarch64/: hassio-dbus-openrc-0.1.1-r0.apk  hassio-os-agent-1.6.0-r0.apk  hassio-supervised-1.7.0-r1.apk  hassio-supervised-nm-1.7.0-r0.apk
armhf/: hassio-dbus-openrc-0.1.1-r0.apk  hassio-os-agent-1.5.1-r0.apk  hassio-os-agent-1.6.0-r0.apk  hassio-supervised-1.5.0-r1.apk  hassio-supervised-1.5.0-r2.apk  hassio-supervised-1.7.0-r0.apk  hassio-supervised-1.7.0-r2.apk  hassio-supervised-1.7.0-r3.apk  hassio-supervised-nm-1.5.0-r0.apk  hassio-supervised-nm-1.7.0-r0.apk
armv7/: hassio-dbus-openrc-0.1.1-r0.apk  hassio-os-agent-1.5.1-r0.apk  hassio-os-agent-1.6.0-r0.apk  hassio-supervised-1.5.0-r2.apk  hassio-supervised-1.7.0-r2.apk  hassio-supervised-1.7.0-r3.apk  hassio-supervised-nm-1.5.0-r0.apk  hassio-supervised-nm-1.7.0-r0.apk
hassio-dbus-openrc/: APKBUILD  hassio-dbus-openrc.initd  hassio-dbus-openrc.post-install  hassio-dbus-openrc.pre-deinstall  org.freedesktop.hostname1.conf  org.freedesktop.systemd1.conf  org.freedesktop.timedate1.conf
hassio-dbus-openrc/py-pkg/: pyproject.toml
hassio-dbus-openrc/py-pkg/dbusrc/: __main__.py  hostname.py  interface.py  systemd.py  timedate.py  utils.py
hassio-os-agent/: APKBUILD  hassio-os-agent.initd  hassio-os-agent.post-install  hassio-os-agent.pre-deinstall
hassio-supervised-nm/: APKBUILD  hassio-supervised-nm.patch  hassio-supervised-nm.post-deinstall  hassio-supervised-nm.post-install  hassio-supervised-nm.pre-install
(+94 files in other folders)
